emoji_window/emoji_window.h


// Button click callback type (stdcall)
// 鍙傛暟: button_id - 鎸夐挳ID, parent_hwnd - 鐖剁獥鍙ｅ彞鏌?
typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);


// Message box callback type (confirmed: 1=OK, 0=Cancel)
typedef void (__stdcall *MessageBoxCallback)(int confirmed);


// 绐楀彛澶у皬鏀瑰彉鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *WindowResizeCallback)(HWND hwnd, int width, int height);


// 鑿滃崟椤圭偣鍑诲洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
// menu_id: 椤剁骇鑿滃崟ID锛堝 #鑿滃崟_涓婚璁剧疆 / #鑿滃崟_娴嬭瘯鑿滃崟锛?
// item_id: 琚偣鍑荤殑鑿滃崟椤笽D锛堝瓙椤笽D鎴栭《绾D锛?
typedef void (__stdcall *MenuItemClickCallback)(int menu_id, int item_id);


// 澶嶉€夋鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *CheckBoxCallback)(HWND hCheckBox, BOOL checked);


// 杩涘害鏉″洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ProgressBarCallback)(HWND hProgressBar, int value);


// 鍥剧墖妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *PictureBoxCallback)(HWND hPictureBox);
// 鍗曢€夋寜閽洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *RadioButtonCallback)(HWND hRadioButton, int group_id, BOOL checked);
typedef void (__stdcall *SliderCallback)(HWND hSlider, int value);
typedef void (__stdcall *SwitchCallback)(HWND hSwitch, BOOL checked);
typedef void (__stdcall *NotificationCallback)(HWND hNotification, int event_type);

// 鍒楄〃妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);


// 缁勫悎妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ComboBoxCallback)(HWND hComboBox, int index);


// 鐑敭鎺т欢鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *HotKeyCallback)(HWND hHotKey, int vk_code, int modifiers);


// 鍊兼敼鍙樺洖璋?(hwnd)
typedef void (__stdcall *ValueChangedCallback)(HWND hwnd);


// 鍒嗙粍妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *GroupBoxCallback)(HWND hGroupBox);

    __declspec(dllexport) HWND __stdcall create_window_bytes(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height);

    __declspec(dllexport) HWND __stdcall create_window_bytes_ex(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height, UINT32 titlebar_color, UINT32 client_bg_color);

    
    // ========== 绐楀彛灞炴€у懡浠?==========
    
    // 鑾峰彇绐楀彛鏍囬 (UTF-8缂栫爜锛屼袱娆¤皟鐢ㄦā寮?
    __declspec(dllexport) int __stdcall GetWindowTitle(HWND hwnd, unsigned char* buffer, int buffer_size);

    
    // 鑾峰彇绐楀彛浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) int __stdcall GetWindowBounds(HWND hwnd, int* x, int* y, int* width, int* height);

    
    // 璁剧疆绐楀彛浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetWindowBounds(HWND hwnd, int x, int y, int width, int height);

    
    // 鑾峰彇绐楀彛鍙鐘舵€?
    __declspec(dllexport) int __stdcall GetWindowVisible(HWND hwnd);

    
    // 鏄剧ず鎴栭殣钘忕獥鍙?
    __declspec(dllexport) void __stdcall ShowEmojiWindow(HWND hwnd, int visible);

    
    // 鑾峰彇绐楀彛鏍囬鏍忛鑹?(RGB鏍煎紡)
    __declspec(dllexport) UINT32 __stdcall GetWindowTitlebarColor(HWND hwnd);
    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);
    __declspec(dllexport) int __stdcall run_message_loop();

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);


    // ========== 绐楀彛澶у皬鏀瑰彉鍥炶皟 ==========

    // 璁剧疆绐楀彛澶у皬鏀瑰彉鍥炶皟
    __declspec(dllexport) void __stdcall SetWindowResizeCallback(
        WindowResizeCallback callback
    );