emoji_window/treeview_window.h



// 回调函数类型定义

// 基础回调：void callback(int node_id, void* context)
typedef void(__stdcall* TreeViewCallback)(int node_id, void* context);