examples/Csharp/Common/EmojiWindowNative.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace EmojiWindowDemoCommon
{
    internal static class EmojiWindowNative
    {
        [StructLayout(LayoutKind.Sequential)]
        internal struct Point
        {
            public int X;
            public int Y;
        }

        private const string DllName = "emoji_window.dll";
        private const CallingConvention CallConv = CallingConvention.StdCall;
        private static readonly byte[] EmptyBytes = new byte[0];

        public const int AlignLeft = 0;
        public const int AlignCenter = 1;
        public const int AlignRight = 2;

        public const int CheckBoxStyleDefault = 0;
        public const int CheckBoxStyleFill = 1;
        public const int CheckBoxStyleButton = 2;
        public const int CheckBoxStyleCard = 3;

        public const int RadioStyleDefault = 0;
        public const int RadioStyleBorder = 1;
        public const int RadioStyleButton = 2;

        public const int GroupBoxStyleOutline = 0;
        public const int GroupBoxStyleCard = 1;
        public const int GroupBoxStylePlain = 2;
        public const int GroupBoxStyleHeaderBar = 3;

        public const int TabHeaderStyleLine = 0;
        public const int TabHeaderStyleCard = 1;
        public const int TabHeaderStyleCardPlain = 2;
        public const int TabHeaderStyleSegmented = 3;

        public const int TabPositionTop = 0;
        public const int TabPositionBottom = 1;
        public const int TabPositionLeft = 2;
        public const int TabPositionRight = 3;

        public const int ScaleNone = 0;
        public const int ScaleStretch = 1;
        public const int ScaleFit = 2;
        public const int ScaleCenter = 3;

        public const int PopupTop = 0;
        public const int PopupBottom = 3;
        public const int PopupLeft = 6;
        public const int PopupRight = 9;

        public const int TooltipThemeDark = 0;
        public const int TooltipThemeLight = 1;
        public const int TooltipThemeCustom = 2;

        public const int TooltipTriggerHover = 0;
        public const int TooltipTriggerClick = 1;

        public const int NotifyTopRight = 0;
        public const int NotifyTopLeft = 1;
        public const int NotifyBottomRight = 2;
        public const int NotifyBottomLeft = 3;

        public const int NotifyInfo = 0;
        public const int NotifySuccess = 1;
        public const int NotifyWarning = 2;
        public const int NotifyError = 3;

        public const int HotKeyCtrl = 1;
        public const int HotKeyShift = 2;
        public const int HotKeyAlt = 4;

        public const int DatePrecisionYmd = 1;
        public const int DatePrecisionYmdHm = 3;
        public const int DatePrecisionYmdHms = 4;

        public const int TreeCallbackNodeSelected = 1;
        public const int TreeCallbackNodeExpanded = 2;
        public const int TreeCallbackNodeCollapsed = 3;
        public const int TreeCallbackNodeMoved = 8;

        public const int DataGridSelectionCell = 1;
        public const int DataGridSortAsc = 1;
        public const int DataGridSortDesc = 2;

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void ButtonClickCallback(int buttonId, IntPtr parentHwnd);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void MessageBoxCallback(int confirmed);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void WindowResizeCallback(IntPtr hwnd, int width, int height);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void TabCallback(IntPtr hTabControl, int selectedIndex);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void TabCloseCallback(IntPtr hTabControl, int index);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void TabRightClickCallback(IntPtr hTabControl, int index, int x, int y);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void TabDoubleClickCallback(IntPtr hTabControl, int index);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void CheckBoxCallback(IntPtr hCheckBox, int isChecked);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void RadioButtonCallback(IntPtr hRadioButton, int groupId, int isChecked);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void ProgressBarCallback(IntPtr hProgressBar, int value);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void SliderCallback(IntPtr hSlider, int value);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void SwitchCallback(IntPtr hSwitch, int isChecked);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void NotificationCallback(IntPtr hNotification, int eventType);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void PictureBoxCallback(IntPtr hPictureBox);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void ListBoxCallback(IntPtr hListBox, int index);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void ComboBoxCallback(IntPtr hComboBox, int index);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void HotKeyCallback(IntPtr hHotKey, int vkCode, int modifiers);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void ValueChangedCallback(IntPtr hwnd);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void MenuItemClickCallback(int menuId, int itemId);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void GroupBoxCallback(IntPtr hGroupBox);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void TreeViewCallback(int nodeId, IntPtr context);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void DataGridCellCallback(IntPtr hGrid, int row, int col);

        [UnmanagedFunctionPointer(CallConv)]
        public delegate void DataGridColumnHeaderCallback(IntPtr hGrid, int col);

        public delegate int GetTextFromIdCallback(int handle, IntPtr buffer, int bufferSize);
        public delegate int GetTextFromHandleCallback(IntPtr handle, IntPtr buffer, int bufferSize);
        public delegate int GetIndexedTextFromHandleCallback(IntPtr handle, int index, IntPtr buffer, int bufferSize);
        public delegate int GetCellTextFromHandleCallback(IntPtr handle, int row, int col, IntPtr buffer, int bufferSize);

        public static byte[] ToUtf8(string text)
        {
            return string.IsNullOrEmpty(text) ? EmptyBytes : Encoding.UTF8.GetBytes(text);
        }

        public static uint ARGB(int a, int r, int g, int b)
        {
            return (uint)(((a & 255) << 24) | ((r & 255) << 16) | ((g & 255) << 8) | (b & 255));
        }

        public static string ReadText(int handle, GetTextFromIdCallback callback)
        {
            int length = callback(handle, IntPtr.Zero, 0);
            if (length <= 0)
            {
                return string.Empty;
            }

            IntPtr buffer = Marshal.AllocHGlobal(length);
            try
            {
                callback(handle, buffer, length);
                byte[] bytes = new byte[length];
                Marshal.Copy(buffer, bytes, 0, length);
                return Encoding.UTF8.GetString(bytes);
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        public static string ReadText(IntPtr handle, GetTextFromHandleCallback callback)
        {
            int length = callback(handle, IntPtr.Zero, 0);
            if (length <= 0)
            {
                return string.Empty;
            }

            IntPtr buffer = Marshal.AllocHGlobal(length);
            try
            {
                callback(handle, buffer, length);
                byte[] bytes = new byte[length];
                Marshal.Copy(buffer, bytes, 0, length);
                return Encoding.UTF8.GetString(bytes);
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        public static string ReadIndexedText(IntPtr handle, int index, GetIndexedTextFromHandleCallback callback)
        {
            int length = callback(handle, index, IntPtr.Zero, 0);
            if (length <= 0)
            {
                return string.Empty;
            }

            IntPtr buffer = Marshal.AllocHGlobal(length);
            try
            {
                callback(handle, index, buffer, length);
                byte[] bytes = new byte[length];
                Marshal.Copy(buffer, bytes, 0, length);
                return Encoding.UTF8.GetString(bytes);
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        public static string ReadCellText(IntPtr handle, int row, int col, GetCellTextFromHandleCallback callback)
        {
            int length = callback(handle, row, col, IntPtr.Zero, 0);
            if (length <= 0)
            {
                return string.Empty;
            }

            IntPtr buffer = Marshal.AllocHGlobal(length);
            try
            {
                callback(handle, row, col, buffer, length);
                byte[] bytes = new byte[length];
                Marshal.Copy(buffer, bytes, 0, length);
                return Encoding.UTF8.GetString(bytes);
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        public static Point ClientToScreenPoint(IntPtr hwnd, int x, int y)
        {
            Point point = new Point { X = x, Y = y };
            ClientToScreen(hwnd, ref point);
            return point;
        }

        [DllImport("user32.dll", SetLastError = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        private static extern bool ClientToScreen(IntPtr hWnd, ref Point lpPoint);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr create_window_bytes(byte[] titleBytes, int titleLen, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr create_window_bytes_ex(byte[] titleBytes, int titleLen, int x, int y, int width, int height, uint titlebarColor, uint clientBgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void set_message_loop_main_window(IntPtr hwnd);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int run_message_loop();

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void destroy_window(IntPtr hwnd);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetWindowTitle(IntPtr hwnd, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetWindowBounds(IntPtr hwnd, out int x, out int y, out int width, out int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetWindowBounds(IntPtr hwnd, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetWindowVisible(IntPtr hwnd);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowEmojiWindow(IntPtr hwnd, int visible);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetWindowTitlebarColor(IntPtr hwnd);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetWindowResizeCallback(WindowResizeCallback callback);
